[package]
name = "vercel-xhttp-relay"
version = "0.1.0"
edition = "2021"
description = "Rust-based XHTTP relay running on Vercel Edge for Xray/V2Ray"
license = "MIT"
autobins = false

[[bin]]
name = "index"
path = "api/index.rs"

[dependencies]
vercel_runtime = "1.1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2"] }